*	Again, AtomicWiki is working with eXist trunk. *	AtomicWiki patches have been distributed in several files. *	Configuration files have been updated. *	Now controller-config.xml is stored in etc directory, instead the database. *	Other ancient changes.
git-svn-id: svn://montblanc.cnio.es/trunk/projects/GOPHER@1847 b091869f-ef14-0410-ae3d-fae7310851ef